bindings/swift/Sources/CProven/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

typedef enum ProvenStatus {
    PROVEN_OK = 0,
    PROVEN_ERR_NULL_POINTER = -1,
    PROVEN_ERR_INVALID_ARGUMENT = -2,
    PROVEN_ERR_OVERFLOW = -3,
    PROVEN_ERR_UNDERFLOW = -4,
    PROVEN_ERR_DIVISION_BY_ZERO = -5,
    PROVEN_ERR_PARSE_FAILURE = -6,
    PROVEN_ERR_VALIDATION_FAILED = -7,
    PROVEN_ERR_OUT_OF_BOUNDS = -8,
    PROVEN_ERR_ENCODING_ERROR = -9,
    PROVEN_ERR_ALLOCATION_FAILED = -10,
    PROVEN_ERR_NOT_IMPLEMENTED = -99
} ProvenStatus;
/* ============================================================================
 * Result Types
 * ============================================================================ */

typedef struct ProvenIntResult {
    ProvenStatus status;
    int64_t value;
} ProvenIntResult;
typedef struct ProvenBoolResult {
    ProvenStatus status;
    bool value;
} ProvenBoolResult;
typedef struct ProvenStringResult {
    ProvenStatus status;
    char* value;
    size_t length;
} ProvenStringResult;
/* ============================================================================
 * Memory Management
 * ============================================================================ */

void proven_free_string(char* ptr);
/* ============================================================================
 * SafeMath
 * ============================================================================ */

ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
/* ============================================================================
 * SafeString
 * ============================================================================ */

ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePath
 * ============================================================================ */

ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeCrypto
 * ============================================================================ */

ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeUrl
 * ============================================================================ */

typedef struct ProvenUrlComponents {
    char* scheme;
    size_t scheme_len;
    char* host;
    size_t host_len;
    uint16_t port;
    bool has_port;
    char* path;
    size_t path_len;
    char* query;
    size_t query_len;
    char* fragment;
    size_t fragment_len;
} ProvenUrlComponents;
typedef struct ProvenUrlResult {
    ProvenStatus status;
    ProvenUrlComponents components;
} ProvenUrlResult;
ProvenUrlResult proven_url_parse(const uint8_t* ptr, size_t len);
void proven_url_free(ProvenUrlComponents* components);
/* ============================================================================
 * SafeEmail
 * ============================================================================ */

ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeNetwork
 * ============================================================================ */

typedef struct ProvenIPv4Address {
    uint8_t octets[4];
} ProvenIPv4Address;
typedef struct ProvenIPv4Result {
    ProvenStatus status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
/* ============================================================================
 * SafeHex (FFI-level: proven_hex_encode / proven_hex_decode)
 * ============================================================================ */

ProvenStringResult proven_hex_encode(const uint8_t* ptr, size_t len, bool uppercase);
typedef struct ProvenHexDecodeResult {
    ProvenStatus status;
    uint8_t* data;
    size_t length;
} ProvenHexDecodeResult;
ProvenHexDecodeResult proven_hex_decode(const uint8_t* ptr, size_t len);
typedef struct ProvenUUIDResult {
    ProvenStatus status;
    ProvenUUID uuid;
} ProvenUUIDResult;
ProvenUUIDResult proven_uuid_v4(void);
ProvenUUIDResult proven_uuid_parse(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePhone (FFI-level: proven_phone_*)
 * ============================================================================ */

typedef struct ProvenPhoneResult {
    ProvenStatus status;
    uint16_t country_code;
    uint64_t national_number;
} ProvenPhoneResult;
ProvenPhoneResult proven_phone_parse(const uint8_t* ptr, size_t len);
/* ============================================================================
 * Version Information
 * ============================================================================ */

uint32_t proven_version_major(void);
uint32_t proven_version_minor(void);
uint32_t proven_version_patch(void);